{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 139,
  "lineage": "f5b831f2-47bc-2a70-946d-8c03c17673df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ca27eb4129e0419",
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:elastic-ip/eipalloc-08ca27eb4129e0419",
            "association_id": "eipassoc-0659408c2172bb498",
            "domain": "vpc",
            "id": "eipalloc-08ca27eb4129e0419",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0c5a1c7d407b22dbb",
            "private_dns": "ip-192-168-0-9.ap-southeast-1.compute.internal",
            "private_ip": "192.168.0.9",
            "public_dns": "ec2-3-1-155-66.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.1.155.66",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-otms-eip"
            },
            "tags_all": {
              "Name": "dev-otms-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:internet-gateway/igw-0432d03ad8395771d",
            "id": "igw-0432d03ad8395771d",
            "owner_id": "466171398477",
            "tags": {
              "Name": "dev-otms-igw"
            },
            "tags_all": {
              "Name": "dev-otms-igw"
            },
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:466171398477:loadbalancer/app/dev-alb/3110721a111fd749",
            "arn_suffix": "app/dev-alb/3110721a111fd749",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-alb-1008324855.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:466171398477:loadbalancer/app/dev-alb/3110721a111fd749",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02ffec499b2f71ead"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05b816b63c7e4ae55"
              },
              {
                "subnet_id": "subnet-07f1597909cb4aae1"
              }
            ],
            "subnets": [
              "subnet-05b816b63c7e4ae55",
              "subnet-07f1597909cb4aae1"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-0a6c8bdbf54760d9a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ca27eb4129e0419",
            "association_id": "eipassoc-0659408c2172bb498",
            "connectivity_type": "public",
            "id": "nat-0f5eecfcffc91f5d6",
            "network_interface_id": "eni-0c5a1c7d407b22dbb",
            "private_ip": "192.168.0.9",
            "public_ip": "3.1.155.66",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07f1597909cb4aae1",
            "tags": {
              "Name": "dev-otms-natgw"
            },
            "tags_all": {
              "Name": "dev-otms-natgw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "frontend",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:network-acl/acl-0abe419da9ae37f61",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0abe419da9ae37f61",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "192.168.0.0/28",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "192.168.0.0/28",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "owner_id": "466171398477",
            "subnet_ids": [],
            "tags": {
              "Name": "frontend",
              "app_name": "networkskeleton",
              "costcenter": "otms"
            },
            "tags_all": {
              "Name": "frontend",
              "app_name": "networkskeleton",
              "costcenter": "otms"
            },
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:network-acl/acl-05fa783a9a6d1aa04",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05fa783a9a6d1aa04",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "466171398477",
            "subnet_ids": [],
            "tags": {
              "Name": "public",
              "app_name": "networkskeleton",
              "costcenter": "otms"
            },
            "tags_all": {
              "Name": "public",
              "app_name": "networkskeleton",
              "costcenter": "otms"
            },
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "frontend-egress-100",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2690324232",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0abe419da9ae37f61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.network_acl",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-egress-100",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2614516336",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05fa783a9a6d1aa04",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.network_acl",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "frontend-ingress-100",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "192.168.0.0/28",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2216342713",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0abe419da9ae37f61",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.network_acl",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "frontend-ingress-200",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "192.168.0.0/28",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4168847714",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0abe419da9ae37f61",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.network_acl",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-ingress-100",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-188769531",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05fa783a9a6d1aa04",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.network_acl",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-025cc4d2cb362993b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f5eecfcffc91f5d6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-025cc4d2cb362993b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0432d03ad8395771d",
            "id": "r-rtb-07c58471de288ecdd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07c58471de288ecdd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:route-table/rtb-025cc4d2cb362993b",
            "id": "rtb-025cc4d2cb362993b",
            "owner_id": "466171398477",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f5eecfcffc91f5d6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-otms-private-rt"
            },
            "tags_all": {
              "Name": "dev-otms-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:route-table/rtb-07c58471de288ecdd",
            "id": "rtb-07c58471de288ecdd",
            "owner_id": "466171398477",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0432d03ad8395771d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-otms-public-rt"
            },
            "tags_all": {
              "Name": "dev-otms-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb9328436eec7f3d",
            "route_table_id": "rtb-025cc4d2cb362993b",
            "subnet_id": "subnet-0c580317828f2257c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eff6cfb90c5824b1",
            "route_table_id": "rtb-025cc4d2cb362993b",
            "subnet_id": "subnet-0b6d8651a143e596b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033f215a0db379734",
            "route_table_id": "rtb-025cc4d2cb362993b",
            "subnet_id": "subnet-0642c71efa0fbc5d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051c8a502948f2c51",
            "route_table_id": "rtb-07c58471de288ecdd",
            "subnet_id": "subnet-07f1597909cb4aae1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aedec215d85e73db",
            "route_table_id": "rtb-07c58471de288ecdd",
            "subnet_id": "subnet-05b816b63c7e4ae55"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-02ffec499b2f71ead",
            "description": "Security group for alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ffec499b2f71ead",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-alb-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-alb-sg"
            },
            "tags_all": {
              "Name": "dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "attendance",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-0f7d578604b71ae2f",
            "description": "Security group for attendance",
            "egress": [],
            "id": "sg-0f7d578604b71ae2f",
            "ingress": [],
            "name": "dev-attendance-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-attendance-sg"
            },
            "tags_all": {
              "Name": "dev-attendance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "employee",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-04a7361dff997aec9",
            "description": "Security group for employee",
            "egress": [],
            "id": "sg-04a7361dff997aec9",
            "ingress": [],
            "name": "dev-employee-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-employee-sg"
            },
            "tags_all": {
              "Name": "dev-employee-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "frontend",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-094731aaf8c910617",
            "description": "Security group for frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094731aaf8c910617",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from alb",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02ffec499b2f71ead"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "SSH from openvpn",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02e7eaf2c8553b779"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-frontend-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-frontend-sg"
            },
            "tags_all": {
              "Name": "dev-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "notification",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-0e482887ee10968db",
            "description": "Security group for notification",
            "egress": [],
            "id": "sg-0e482887ee10968db",
            "ingress": [],
            "name": "dev-notification-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-notification-sg"
            },
            "tags_all": {
              "Name": "dev-notification-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "openvpn",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-02e7eaf2c8553b779",
            "description": "Security group for openvpn",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e7eaf2c8553b779",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow OpenVPN",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow OpenVPN",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow OpenVPN",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow OpenVPN",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow OpenVPN",
                "from_port": 943,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 943
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow OpenVPN",
                "from_port": 945,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 945
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev-openvpn-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-openvpn-sg"
            },
            "tags_all": {
              "Name": "dev-openvpn-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "postgresql",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-051d6cf8d27a05865",
            "description": "Security group for postgresql",
            "egress": [],
            "id": "sg-051d6cf8d27a05865",
            "ingress": [],
            "name": "dev-postgresql-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-postgresql-sg"
            },
            "tags_all": {
              "Name": "dev-postgresql-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "redis",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-0ead3ef428ffcac73",
            "description": "Security group for redis",
            "egress": [],
            "id": "sg-0ead3ef428ffcac73",
            "ingress": [],
            "name": "dev-redis-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-redis-sg"
            },
            "tags_all": {
              "Name": "dev-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "salary",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-046233fd6502a9e23",
            "description": "Security group for salary",
            "egress": [],
            "id": "sg-046233fd6502a9e23",
            "ingress": [],
            "name": "dev-salary-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-salary-sg"
            },
            "tags_all": {
              "Name": "dev-salary-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "scylla",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:security-group/sg-08424563b7eafa24c",
            "description": "Security group for scylla",
            "egress": [],
            "id": "sg-08424563b7eafa24c",
            "ingress": [],
            "name": "dev-scylla-sg",
            "name_prefix": "",
            "owner_id": "466171398477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-scylla-sg"
            },
            "tags_all": {
              "Name": "dev-scylla-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb-egress-0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound",
            "from_port": 0,
            "id": "sgrule-2312809209",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02ffec499b2f71ead",
            "security_group_rule_id": "sgr-040d040ab77ec477c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "alb-ingress-0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP access",
            "from_port": 80,
            "id": "sgrule-4151257808",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02ffec499b2f71ead",
            "security_group_rule_id": "sgr-0b16b0fefaee37274",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "alb-ingress-1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS access",
            "from_port": 443,
            "id": "sgrule-4238383444",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02ffec499b2f71ead",
            "security_group_rule_id": "sgr-014a701ab3632f44d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "frontend-egress-0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound",
            "from_port": 0,
            "id": "sgrule-404933872",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-094731aaf8c910617",
            "security_group_rule_id": "sgr-09ca4782fa296f4af",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "frontend-ingress-0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SSH from openvpn",
            "from_port": 22,
            "id": "sgrule-1851159771",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-094731aaf8c910617",
            "security_group_rule_id": "sgr-0eb86e8cd3a0dd426",
            "self": false,
            "source_security_group_id": "sg-02e7eaf2c8553b779",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "frontend-ingress-1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTP from alb",
            "from_port": 3000,
            "id": "sgrule-755910243",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-094731aaf8c910617",
            "security_group_rule_id": "sgr-01e68da1a2b331a66",
            "self": false,
            "source_security_group_id": "sg-02ffec499b2f71ead",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "openvpn-egress-0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound",
            "from_port": 0,
            "id": "sgrule-796498883",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02e7eaf2c8553b779",
            "security_group_rule_id": "sgr-0649a6f8601fd5150",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "openvpn-ingress-0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow OpenVPN",
            "from_port": 1194,
            "id": "sgrule-1263720834",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-02e7eaf2c8553b779",
            "security_group_rule_id": "sgr-0113236442e333022",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 1194,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "openvpn-ingress-1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow OpenVPN",
            "from_port": 80,
            "id": "sgrule-2375664373",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02e7eaf2c8553b779",
            "security_group_rule_id": "sgr-052fbc42d949f76dc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "openvpn-ingress-2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow OpenVPN",
            "from_port": 22,
            "id": "sgrule-991141696",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02e7eaf2c8553b779",
            "security_group_rule_id": "sgr-07c8c4f1a084b13da",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "openvpn-ingress-3",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow OpenVPN",
            "from_port": 443,
            "id": "sgrule-3129104655",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02e7eaf2c8553b779",
            "security_group_rule_id": "sgr-012f759c2505068c0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "openvpn-ingress-4",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow OpenVPN",
            "from_port": 943,
            "id": "sgrule-3619108307",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02e7eaf2c8553b779",
            "security_group_rule_id": "sgr-0d44bb48362b3de9e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 943,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "openvpn-ingress-5",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow OpenVPN",
            "from_port": 945,
            "id": "sgrule-1647733197",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02e7eaf2c8553b779",
            "security_group_rule_id": "sgr-01406dc2a2a27dc2a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 945,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "openvpn-ingress-6",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all traffic",
            "from_port": 0,
            "id": "sgrule-2151729605",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02e7eaf2c8553b779",
            "security_group_rule_id": "sgr-088b59bb11c2a850c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:subnet/subnet-0c580317828f2257c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c580317828f2257c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "466171398477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-otms-private-1",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-otms-private-1",
              "Tier": "private"
            },
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:subnet/subnet-0b6d8651a143e596b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.0.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6d8651a143e596b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "466171398477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-otms-private-2",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-otms-private-2",
              "Tier": "private"
            },
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:subnet/subnet-0642c71efa0fbc5d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.0.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0642c71efa0fbc5d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "466171398477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-otms-private-3",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-otms-private-3",
              "Tier": "private"
            },
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:subnet/subnet-07f1597909cb4aae1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f1597909cb4aae1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "466171398477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-otms-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-otms-public-1",
              "Tier": "public"
            },
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:subnet/subnet-05b816b63c7e4ae55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b816b63c7e4ae55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "466171398477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-otms-public-2",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-otms-public-2",
              "Tier": "public"
            },
            "vpc_id": "vpc-0a6c8bdbf54760d9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466171398477:vpc/vpc-0a6c8bdbf54760d9a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-09fcd492e0ab5ed07",
            "default_route_table_id": "rtb-01576f260729a9cfc",
            "default_security_group_id": "sg-07c9dfcc964db3447",
            "dhcp_options_id": "dopt-03a082a8f7849a1a0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6c8bdbf54760d9a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01576f260729a9cfc",
            "owner_id": "466171398477",
            "tags": {
              "Environment": "dev",
              "Name": "dev-otms-vpc",
              "Owner": "otms",
              "Project": "otms"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-otms-vpc",
              "Owner": "otms",
              "Project": "otms"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}